...
                trailing: SettingsItemTrailing.value,
                value: t.preferences.currencyUsd,
                iconColor: AppColors.settingsItemOrange,
                onTap: () => _showCurrencyPicker(context),
              ),
              SettingsItemWidget(
                key: const ValueKey('settings_language_item'),
                icon: Icons.language,
                label: t.preferences.language,
                trailing: SettingsItemTrailing.value,
                value: (() {
                  final activeLang = (uiModel?.availableLanguages ?? [])
                      .where(
...
